objects/TM_Data_Record__c.object
<CustomObject>
    <description>Used for Inside Sales</description>
    <label>TM Data</label>
    <nameField>
        <displayFormat>TM-{0000000}</displayFormat>
        <label>TM Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TM Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net__c</fullName>
        <label>Net $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGOR__c</fullName>
        <label>IGOR</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gross__c</fullName>
        <label>Gross $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoCode__c</fullName>
        <label>GeoCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Num__c</fullName>
        <label>List Num</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <label>Rep Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_AA__c</fullName>
        <label>Total AA$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_GC__c</fullName>
        <label>Total GC$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_IR__c</fullName>
        <label>Total IR $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_LC__c</fullName>
        <label>Total LC$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_ICP__c</fullName>
        <label>Total ICP$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_MAS__c</fullName>
        <label>Total MAS $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_TEA__c</fullName>
        <label>Total TEA$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_UVS__c</fullName>
        <label>Total UVS $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Consumable__c</fullName>
        <label>Consumable $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12M_Sales__c</fullName>
        <label>12M Sales $</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_To_Fax__c</fullName>
        <label>Sold To Fax</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12M_Orders__c</fullName>
        <label>12M Orders</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Num__c</fullName>
        <label>Customer Num</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_City__c</fullName>
        <label>Sold To City</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Phone__c</fullName>
        <label>Sold To Phone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_State__c</fullName>
        <label>Sold To State</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Acct_Name__c</fullName>
        <label>Local Acct. Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Minor_Accessory__c</fullName>
        <label>Minor Accessory $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SKU_Description__c</fullName>
        <label>SKU Description</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Address__c</fullName>
        <label>Sold To Address</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IGOR_Description__c</fullName>
        <label>IGOR Description</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Zip_Code__c</fullName>
        <label>Sold To Zip Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Base_Num__c</fullName>
        <label>Customer Base Num</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cutomer_Base_Name__c</fullName>
        <label>Cutomer Base Name</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IGOR_Irem_Class_Desc__c</fullName>
        <label>IGOR Irem Class Desc</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Company_Name__c</fullName>
        <label>Sold To Company Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
</CustomObject>